gradle: Remove Java 21 Workaround